@@ -5,8 +5,11 @@ import net.momirealms.craftengine.core.entity.player.Player;
 import net.momirealms.craftengine.core.pack.LoadingSequence;
 import net.momirealms.craftengine.core.pack.Pack;
 import net.momirealms.craftengine.core.pack.ResourceLocation;
+import net.momirealms.craftengine.core.pack.allocator.IdAllocator;
 import net.momirealms.craftengine.core.plugin.CraftEngine;
+import net.momirealms.craftengine.core.plugin.config.Config;
 import net.momirealms.craftengine.core.plugin.config.ConfigParser;
+import net.momirealms.craftengine.core.plugin.config.IdSectionConfigParser;
 import net.momirealms.craftengine.core.plugin.context.ContextHolder;
 import net.momirealms.craftengine.core.plugin.context.PlayerOptionalContext;
 import net.momirealms.craftengine.core.plugin.locale.LocalizedResourceConfigException;
@@ -23,6 +26,9 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
+import java.util.concurrent.ExecutionException;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -53,12 +59,35 @@ public abstract class AbstractFontManager implements FontManager {
         this.emojiParser = new EmojiParser();
     }
 
+    public ImageParser imageParser() {
+        return imageParser;
+    }
+
+    public EmojiParser emojiParser() {
+        return emojiParser;
+    }
+
     @Override
     public void load() {
         this.offsetFont = Optional.ofNullable(plugin.config().settings().getSection("image.offset-characters"))
                 .map(OffsetFont::new)
                 .orElse(null);
         this.networkTagMapper = new HashMap<>(1024);
+    }
+
+    @Override
+    public OffsetFont offsetFont() {
+        return offsetFont;
+    }
+
+    @Override
+    public Map<Key, BitmapImage> loadedImages() {
+        return Collections.unmodifiableMap(this.images);
+    }
+
+    @Override
+    public Map<Key, Emoji> emojis() {
+        return Collections.unmodifiableMap(this.emojis);
     }
 
     @Override
@@ -213,7 +242,7 @@ public abstract class AbstractFontManager implements FontManager {
                     emoji.content(),
                     PlayerOptionalContext.of(player, ContextHolder.builder()
                             .withOptionalParameter(EmojiParameters.EMOJI, emoji.emojiImage())
-                            .withParameter(EmojiParameters.KEYWORD, emoji.keywords().get(0))
+                            .withParameter(EmojiParameters.KEYWORD, emoji.keywords().getFirst())
                     ).tagResolvers())
             );
             if (emojis.size() >= maxTimes) break;
@@ -371,7 +400,7 @@ public abstract class AbstractFontManager implements FontManager {
         return this.fonts.computeIfAbsent(key, Font::new);
     }
 
-    public class EmojiParser implements ConfigParser {
+    public class EmojiParser extends IdSectionConfigParser {
         public static final String[] CONFIG_SECTION_NAME = new String[] {"emoji", "emojis"};
 
         @Override
@@ -385,18 +414,18 @@ public abstract class AbstractFontManager implements FontManager {
         }
 
         @Override
-        public void parseSection(Pack pack, Path path, Key id, Map<String, Object> section) {
+        public void parseSection(Pack pack, Path path, String node, Key id, Map<String, Object> section) {
             if (emojis.containsKey(id)) {
-                throw new LocalizedResourceConfigException("warning.config.emoji.duplicate", path, id);
+                throw new LocalizedResourceConfigException("warning.config.emoji.duplicate");
             }
             String permission = (String) section.get("permission");
             Object keywordsRaw = section.get("keywords");
             if (keywordsRaw == null) {
-                throw new LocalizedResourceConfigException("warning.config.emoji.missing_keywords", path, id);
+                throw new LocalizedResourceConfigException("warning.config.emoji.missing_keywords");
             }
             List<String> keywords = MiscUtils.getAsStringList(keywordsRaw);
             if (keywords.isEmpty()) {
-                throw new LocalizedResourceConfigException("warning.config.emoji.missing_keywords", path, id);
+                throw new LocalizedResourceConfigException("warning.config.emoji.missing_keywords");
             }
             Object rawContent = section.getOrDefault("content", "<white><arg:emoji></white>");
             String content;
@@ -415,7 +444,7 @@ public abstract class AbstractFontManager implements FontManager {
                     if (bitmapImage.isPresent()) {
                         image = bitmapImage.get().miniMessageAt(0, 0);
                     } else {
-                        throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", path, id, rawImage);
+                        throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", rawImage);
                     }
                 } else if (split.length == 4) {
                     Key imageId = new Key(split[0], split[1]);
@@ -424,13 +453,13 @@ public abstract class AbstractFontManager implements FontManager {
                         try {
                             image = bitmapImage.get().miniMessageAt(Integer.parseInt(split[2]), Integer.parseInt(split[3]));
                         } catch (ArrayIndexOutOfBoundsException e) {
-                            throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", path, id, rawImage);
+                            throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", rawImage);
                         }
                     } else {
-                        throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", path, id, rawImage);
+                        throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", rawImage);
                     }
                 } else {
-                    throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", path, id, rawImage);
+                    throw new LocalizedResourceConfigException("warning.config.emoji.invalid_image", rawImage);
                 }
             }
             Emoji emoji = new Emoji(content, permission, image, keywords);
@@ -438,8 +467,9 @@ public abstract class AbstractFontManager implements FontManager {
         }
     }
 
-    public class ImageParser implements ConfigParser {
+    public class ImageParser extends IdSectionConfigParser {
         public static final String[] CONFIG_SECTION_NAME = new String[] {"images", "image"};
+        private final Map<Key, IdAllocator> idAllocators = new HashMap<>();
 
         @Override
         public String[] sectionId() {
@@ -452,129 +482,219 @@ public abstract class AbstractFontManager implements FontManager {
         }
 
         @Override
-        public void parseSection(Pack pack, Path path, Key id, Map<String, Object> section) {
-            if (images.containsKey(id)) {
-                throw new LocalizedResourceConfigException("warning.config.image.duplicate", path, id);
+        public void postProcess() {
+            for (Map.Entry<Key, IdAllocator> entry : this.idAllocators.entrySet()) {
+                entry.getValue().processPendingAllocations();
+                try {
+                    entry.getValue().saveToCache();
+                } catch (IOException e) {
+                    AbstractFontManager.this.plugin.logger().warn("Error while saving codepoint allocation for font " + entry.getKey().asString(), e);
+                }
+            }
+        }
+
+        @Override
+        public void preProcess() {
+            this.idAllocators.clear();
+        }
+
+        public IdAllocator getOrCreateIdAllocator(Key key) {
+            return this.idAllocators.computeIfAbsent(key, k -> {
+                IdAllocator newAllocator = new IdAllocator(plugin.dataFolderPath().resolve("cache").resolve("font").resolve(k.namespace()).resolve(k.value() + ".json"));
+                newAllocator.reset(Config.codepointStartingValue(k), 1114111); // utf16
+                try {
+                    newAllocator.loadFromCache();
+                } catch (IOException e) {
+                    AbstractFontManager.this.plugin.logger().warn("Error while loading chars data from cache for font " + k.asString(), e);
+                }
+                return newAllocator;
+            });
+        }
+
+        @Override
+        public void parseSection(Pack pack, Path path, String node, Key id, Map<String, Object> section) {
+            if (AbstractFontManager.this.images.containsKey(id)) {
+                throw new LocalizedResourceConfigException("warning.config.image.duplicate");
             }
 
             Object file = section.get("file");
             if (file == null) {
-                throw new LocalizedResourceConfigException("warning.config.image.missing_file", path, id);
+                throw new LocalizedResourceConfigException("warning.config.image.missing_file");
             }
 
-            String resourceLocation = CharacterUtils.replaceBackslashWithSlash(file.toString());
+            String resourceLocation = MiscUtils.make(CharacterUtils.replaceBackslashWithSlash(file.toString()), s -> s.endsWith(".png") ? s : s + ".png");
             if (!ResourceLocation.isValid(resourceLocation)) {
-                throw new LocalizedResourceConfigException("warning.config.image.invalid_file_chars", path, id, resourceLocation);
+                throw new LocalizedResourceConfigException("warning.config.image.invalid_file_chars", resourceLocation);
             }
-
-            String fontName = section.getOrDefault("font", "minecraft:default").toString();
+            String fontName = section.getOrDefault("font", pack.namespace()+ ":default").toString();
             if (!ResourceLocation.isValid(fontName)) {
-                throw new LocalizedResourceConfigException("warning.config.image.invalid_font_chars", path, id, fontName);
+                throw new LocalizedResourceConfigException("warning.config.image.invalid_font_chars", fontName);
             }
 
-            Key fontKey = Key.withDefaultNamespace(fontName, id.namespace());
-            Font font = getOrCreateFont(fontKey);
-            List<char[]> chars;
+            Key fontId = Key.withDefaultNamespace(fontName, id.namespace());
+            Font font = getOrCreateFont(fontId);
+
+            IdAllocator allocator = getOrCreateIdAllocator(fontId);
+
+            int rows;
+            int columns;
+            List<CompletableFuture<Integer>> futureCodepoints = new ArrayList<>();
             Object charsObj = ResourceConfigUtils.get(section, "chars", "char");
+            // 自动分配
             if (charsObj == null) {
-                throw new LocalizedResourceConfigException("warning.config.image.missing_char", path, id);
-            }
-            if (charsObj instanceof List<?> list) {
-                chars = MiscUtils.getAsStringList(list).stream().map(it -> {
-                    if (it.startsWith("\\u")) {
-                        return CharacterUtils.decodeUnicodeToChars(it);
-                    } else {
-                        return it.toCharArray();
+                Object grid = section.get("grid-size");
+                if (grid != null) {
+                    String gridString = grid.toString();
+                    String[] split = gridString.split(",");
+                    if (split.length != 2) {
+                        throw new LocalizedResourceConfigException("warning.config.image.invalid_grid_size", gridString);
                     }
-                }).toList();
-                if (chars.isEmpty()) {
-                    throw new LocalizedResourceConfigException("warning.config.image.missing_char", path, id);
+                    rows = Integer.parseInt(split[0]);
+                    columns = Integer.parseInt(split[1]);
+                    int chars = rows * columns;
+                    if (chars <= 0) {
+                        throw new LocalizedResourceConfigException("warning.config.image.invalid_grid_size", gridString);
+                    }
+                    for (int i = 0; i < rows; i++) {
+                        for (int j = 0; j < columns; j++) {
+                            futureCodepoints.add(allocator.requestAutoId(id.asString() + ":" + i + ":" + j));
+                        }
+                    }
+                } else {
+                    rows = 1;
+                    columns = 1;
+                    futureCodepoints.add(allocator.requestAutoId(id.asString()));
                 }
-            } else {
-                if (charsObj instanceof Integer integer) {
-                    chars = List.of(new char[]{(char) integer.intValue()});
+            }
+            // 使用了list
+            else if (charsObj instanceof List<?> list) {
+                List<String> charsList = MiscUtils.getAsStringList(list);
+                if (charsList.isEmpty() || charsList.getFirst().isEmpty()) {
+                    throw new LocalizedResourceConfigException("warning.config.image.missing_char");
+                }
+                int tempColumns = -1;
+                rows = charsList.size();
+                for (int i = 0; i < charsList.size(); i++) {
+                    String charString = charsList.get(i);
+                    int[] codepoints;
+                    if (charString.startsWith("\\u")) {
+                        codepoints = CharacterUtils.charsToCodePoints(CharacterUtils.decodeUnicodeToChars(charString));
+                    } else {
+                        codepoints = CharacterUtils.charsToCodePoints(charString.toCharArray());
+                    }
+                    for (int j = 0; j < codepoints.length; j++) {
+                        if (codepoints[j] == 0) {
+                            futureCodepoints.add(CompletableFuture.completedFuture(0));
+                        } else {
+                            futureCodepoints.add(allocator.assignFixedId(id.asString() + ":" + i + ":" + j, codepoints[j]));
+                        }
+                    }
+                    if (tempColumns == -1) {
+                        tempColumns = codepoints.length;
+                    } else if (tempColumns != codepoints.length) {
+                        throw new LocalizedResourceConfigException("warning.config.image.invalid_codepoint_grid");
+                    }
+                }
+                columns = tempColumns;
+            }
+            // 使用了具体的值
+            else {
+                if (charsObj instanceof Integer codepoint) {
+                    futureCodepoints.add(allocator.assignFixedId(id.asString(), codepoint));
+                    rows = 1;
+                    columns = 1;
                 } else {
                     String character = charsObj.toString();
                     if (character.isEmpty()) {
-                        throw new LocalizedResourceConfigException("warning.config.image.missing_char", path, id);
+                        throw new LocalizedResourceConfigException("warning.config.image.missing_char");
                     }
-                    if (character.length() == 1) {
-                        chars = List.of(character.toCharArray());
+                    rows = 1;
+                    int[] codepoints;
+                    if (character.startsWith("\\u")) {
+                        codepoints = CharacterUtils.charsToCodePoints(CharacterUtils.decodeUnicodeToChars(character));
                     } else {
-                        if (character.startsWith("\\u")) {
-                            chars = List.of(CharacterUtils.decodeUnicodeToChars(character));
+                        codepoints = CharacterUtils.charsToCodePoints(character.toCharArray());
+                    }
+                    columns = codepoints.length;
+                    for (int i = 0; i < codepoints.length; i++) {
+                        if (codepoints[i] == 0) {
+                            futureCodepoints.add(CompletableFuture.completedFuture(0));
                         } else {
-                            // ??? TODO 需要测试特殊字符集
-//                            if (CharacterUtils.containsCombinedCharacter(character)) {
-//                                TranslationManager.instance().log("warning.config.image.invalid_char", path.toString(), id.toString());
-//                            }
-                            chars = List.of(character.toCharArray());
+                            futureCodepoints.add(allocator.assignFixedId(id.asString() + ":0:" + i, codepoints[i]));
                         }
                     }
                 }
             }
 
-            int size = -1;
-            int[][] codepointGrid = new int[chars.size()][];
-            for (int i = 0; i < chars.size(); ++i) {
-                int[] codepoints = CharacterUtils.charsToCodePoints(chars.get(i));
-                for (int codepoint : codepoints) {
-                    if (font.isCodepointInUse(codepoint)) {
-                        BitmapImage image = font.bitmapImageByCodepoint(codepoint);
-                        throw new LocalizedResourceConfigException("warning.config.image.codepoint_conflict", path, id,
-                                fontKey.toString(),
-                                CharacterUtils.encodeCharsToUnicode(Character.toChars(codepoint)),
-                                new String(Character.toChars(codepoint)),
-                                image.id().toString());
+            CompletableFutures.allOf(futureCodepoints).whenComplete((v, t) -> ResourceConfigUtils.runCatching(path, node, () -> {
+                if (t != null) {
+                    if (t instanceof CompletionException e) {
+                        Throwable cause = e.getCause();
+                        if (cause instanceof IdAllocator.IdConflictException conflict) {
+                            throw new LocalizedResourceConfigException("warning.config.image.codepoint.conflict",
+                                    fontId.toString(),
+                                    CharacterUtils.encodeCharsToUnicode(Character.toChars(conflict.id())),
+                                    new String(Character.toChars(conflict.id())),
+                                    conflict.previousOwner()
+                            );
+                        } else if (cause instanceof IdAllocator.IdExhaustedException) {
+                            throw new LocalizedResourceConfigException("warning.config.image.codepoint.exhausted", fontId.asString());
+                        }
+                    }
+                    throw new RuntimeException("Unknown error occurred", t);
+                }
+
+                int[][] codepointGrid = new int[rows][columns];
+
+                for (int i = 0; i < rows; i++) {
+                    for (int j = 0; j < columns; j++) {
+                        try {
+                            int codepoint = futureCodepoints.get(i * columns + j).get();
+                            codepointGrid[i][j] = codepoint;
+                        } catch (InterruptedException | ExecutionException e) {
+                            AbstractFontManager.this.plugin.logger().warn("Interrupted while allocating codepoint for image " + id.asString(), e);
+                            return;
+                        }
                     }
                 }
-                if (codepoints.length == 0) {
-                    throw new LocalizedResourceConfigException("warning.config.image.missing_char", path, id);
-                }
-                codepointGrid[i] = codepoints;
-                if (size == -1) size = codepoints.length;
-                if (size != codepoints.length) {
-                    throw new LocalizedResourceConfigException("warning.config.image.invalid_codepoint_grid", path, id);
-                }
-            }
 
-            Object heightObj = section.get("height");
-            if (!resourceLocation.endsWith(".png")) resourceLocation += ".png";
-
-            if (heightObj == null) {
-                Key namespacedPath = Key.of(resourceLocation);
-                Path targetImagePath = pack.resourcePackFolder()
-                        .resolve("assets")
-                        .resolve(namespacedPath.namespace())
-                        .resolve("textures")
-                        .resolve(namespacedPath.value());
-                if (Files.exists(targetImagePath)) {
-                    try (InputStream in = Files.newInputStream(targetImagePath)) {
-                        BufferedImage image = ImageIO.read(in);
-                        heightObj = image.getHeight() / codepointGrid.length;
-                    } catch (IOException e) {
-                        plugin.logger().warn("Failed to load image " + targetImagePath, e);
-                        return;
+                Object heightObj = section.get("height");
+                if (heightObj == null) {
+                    Key namespacedPath = Key.of(resourceLocation);
+                    Path targetImagePath = pack.resourcePackFolder()
+                            .resolve("assets")
+                            .resolve(namespacedPath.namespace())
+                            .resolve("textures")
+                            .resolve(namespacedPath.value());
+                    if (Files.exists(targetImagePath)) {
+                        try (InputStream in = Files.newInputStream(targetImagePath)) {
+                            BufferedImage image = ImageIO.read(in);
+                            heightObj = image.getHeight() / codepointGrid.length;
+                        } catch (IOException e) {
+                            plugin.logger().warn("Failed to load image " + targetImagePath, e);
+                            return;
+                        }
+                    } else {
+                        throw new LocalizedResourceConfigException("warning.config.image.missing_height");
                     }
-                } else {
-                    throw new LocalizedResourceConfigException("warning.config.image.missing_height", path, id);
                 }
-            }
 
-            int height = ResourceConfigUtils.getAsInt(heightObj, "height");
-            int ascent = ResourceConfigUtils.getAsInt(section.getOrDefault("ascent", height - 1), "ascent");
-            if (height < ascent) {
-                throw new LocalizedResourceConfigException("warning.config.image.height_ascent_conflict", path, id, String.valueOf(height), String.valueOf(ascent));
-            }
-
-            BitmapImage bitmapImage = new BitmapImage(id, fontKey, height, ascent, resourceLocation, codepointGrid);
-            for (int[] y : codepointGrid) {
-                for (int x : y) {
-                    font.addBitmapImage(x, bitmapImage);
+                int height = ResourceConfigUtils.getAsInt(heightObj, "height");
+                int ascent = ResourceConfigUtils.getAsInt(section.getOrDefault("ascent", height - 1), "ascent");
+                if (height < ascent) {
+                    throw new LocalizedResourceConfigException("warning.config.image.height_ascent_conflict", String.valueOf(height), String.valueOf(ascent));
                 }
-            }
 
-            images.put(id, bitmapImage);
+                BitmapImage bitmapImage = new BitmapImage(id, fontId, height, ascent, resourceLocation, codepointGrid);
+                for (int[] y : codepointGrid) {
+                    for (int x : y) {
+                        font.addBitmapImage(x, bitmapImage);
+                    }
+                }
+
+                AbstractFontManager.this.images.put(id, bitmapImage);
+
+            }, () -> GsonHelper.get().toJson(section)));
         }
     }
 }
